Add formatting function for aligned tables and enhance example generation
- Introduced `format_aligned_table` function to format rows with properly aligned vertical pipes.
- Created example rows for credit and debit transactions to demonstrate correct alignment.
- Updated `build_dynamic_example` to generate examples emphasizing correct Debit/Credit alignment.
- Enhanced `build_multiline_rule` to utilize new formatting for clearer extraction rules.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -1366,6 +1366,227 @@
     "    if debit_idx is None or credit_idx is None:\n",
     "        return \"Multi-line: combine description lines into single row.\"\n",
     "    \n",
+    "    def format_aligned_table(rows):\n",
+    "        \"\"\"Format rows with properly aligned vertical pipes.\"\"\"\n",
+    "        if not rows:\n",
+    "            return []\n",
+    "        \n",
+    "        num_cols = len(rows[0])\n",
+    "        \n",
+    "        # Calculate max width for each column\n",
+    "        col_widths = [0] * num_cols\n",
+    "        for row in rows:\n",
+    "            for i, val in enumerate(row):\n",
+    "                col_widths[i] = max(col_widths[i], len(val))\n",
+    "        \n",
+    "        # Find last non-empty column\n",
+    "        last_col = 0\n",
+    "        for row in rows:\n",
+    "            for i, val in enumerate(row):\n",
+    "                if val:\n",
+    "                    last_col = max(last_col, i)\n",
+    "        \n",
+    "        # Ensure empty MIDDLE columns (between first and last) have minimum width\n",
+    "        for i in range(1, last_col):  # Skip first column, only middle columns\n",
+    "            if col_widths[i] == 0:\n",
+    "                col_widths[i] = 7\n",
+    "        \n",
+    "        # Format each row\n",
+    "        formatted = []\n",
+    "        for row in rows:\n",
+    "            # Determine how many columns to include\n",
+    "            end_col = last_col + 2 if last_col < len(row) - 1 else last_col + 1\n",
+    "            end_col = min(end_col, len(row))\n",
+    "            \n",
+    "            # Pad each column value to its width\n",
+    "            parts = []\n",
+    "            for i in range(end_col):\n",
+    "                val = row[i] if i < len(row) else \"\"\n",
+    "                parts.append(val.ljust(col_widths[i]))\n",
+    "            \n",
+    "            formatted.append(\" | \".join(parts))\n",
+    "        \n",
+    "        return formatted\n",
+    "    \n",
+    "    # Create example rows using ACTUAL column positions\n",
+    "    # Credit example (amount in credit_idx position)\n",
+    "    credit_rows = [[\"\"] * num_cols for _ in range(3)]\n",
+    "    credit_rows[0][0] = \"a date\"\n",
+    "    credit_rows[0][1] = \"line 1\"\n",
+    "    credit_rows[0][credit_idx] = \"85.50\"\n",
+    "    credit_rows[1][1] = \"line 2\"\n",
+    "    credit_rows[2][0] = \"a date\"\n",
+    "    credit_rows[2][1] = \"line 1 line 2\"\n",
+    "    credit_rows[2][credit_idx] = \"85.50\"\n",
+    "    \n",
+    "    # Debit example (amount in debit_idx position)\n",
+    "    debit_rows = [[\"\"] * num_cols for _ in range(3)]\n",
+    "    debit_rows[0][0] = \"a date\"\n",
+    "    debit_rows[0][1] = \"line 1\"\n",
+    "    debit_rows[0][debit_idx] = \"150.00\"\n",
+    "    debit_rows[1][1] = \"line 2\"\n",
+    "    debit_rows[2][0] = \"a date\"\n",
+    "    debit_rows[2][1] = \"line 1 line 2\"\n",
+    "    debit_rows[2][debit_idx] = \"150.00\"\n",
+    "    \n",
+    "    # Format both examples\n",
+    "    credit_fmt = format_aligned_table(credit_rows)\n",
+    "    debit_fmt = format_aligned_table(debit_rows)\n",
+    "    \n",
+    "    # Build rule with examples in detected column order\n",
+    "    # Build rule with LABELED examples using actual header names\n",
+    "    rule = f\"\"\"  {headers[credit_idx]} example:\n",
+    "       {credit_fmt[0]}\n",
+    "              {credit_fmt[1]}\n",
+    "    you must extract it as:\n",
+    "       {credit_fmt[2]}\n",
+    "\n",
+    "  {headers[debit_idx]} example:\n",
+    "       {debit_fmt[0]}\n",
+    "              {debit_fmt[1]}\n",
+    "    you must extract it as:\n",
+    "       {debit_fmt[2]}\"\"\"\n",
+    "    \n",
+    "    return rule\n",
+    "# Cell 17: Turn 1 - Extract full table (INDEPENDENT, fresh context)\n",
+    "\n",
+    "# Build the header string using LITERAL names from Turn 0\n",
+    "header_string = \" | \".join(table_headers)\n",
+    "\n",
+    "# Build separator row with proper alignment indicators\n",
+    "# Date and Description columns: left-aligned (:---)\n",
+    "# Debit, Credit, Balance columns: right-aligned (---:)\n",
+    "separator_parts = []\n",
+    "for h in table_headers:\n",
+    "    h_lower = h.lower()\n",
+    "    # Right-align numeric columns\n",
+    "    if any(keyword in h_lower for keyword in ['debit', 'credit', 'balance', 'amount', 'total']):\n",
+    "        separator_parts.append('---:')\n",
+    "    else:\n",
+    "        # Left-align text columns (Date, Transaction, Description, etc.)\n",
+    "        separator_parts.append(':---')\n",
+    "\n",
+    "separator_row = \" | \".join(separator_parts)\n",
+    "\n",
+    "# Build dynamic example rows based on detected column structure\n",
+    "# CRITICAL: Examples must emphasize correct Debit/Credit column alignment!\n",
+    "def build_dynamic_example(headers, date_col, desc_col, debit_col, credit_col, balance_col):\n",
+    "    \"\"\"Generate example rows matching detected column structure.\n",
+    "    \n",
+    "    Emphasizes correct Debit/Credit alignment for tax purposes:\n",
+    "    - Debits (purchases/withdrawals) = money OUT = what taxpayer PAID\n",
+    "    - Credits (deposits/income) = money IN = NOT purchases\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Check if we have separate debit/credit columns\n",
+    "    has_separate_debit_credit = (debit_col in headers and credit_col in headers and debit_col != credit_col)\n",
+    "    \n",
+    "    rows = []\n",
+    "    \n",
+    "    if has_separate_debit_credit:\n",
+    "        # 5-column format: Emphasize Debit vs Credit with clear examples\n",
+    "        \n",
+    "        # Example 1: DEBIT transaction (purchase/withdrawal) - money OUT\n",
+    "        row1 = []\n",
+    "        for h in headers:\n",
+    "            if h == date_col:\n",
+    "                row1.append(\"15 Jan\")\n",
+    "            elif h == desc_col:\n",
+    "                row1.append(\"ATM Withdrawal City Branch\")\n",
+    "            elif h == debit_col:\n",
+    "                row1.append(\"200.00\")  # Amount in DEBIT column\n",
+    "            elif h == credit_col:\n",
+    "                row1.append(\"\")  # Credit column EMPTY\n",
+    "            elif h == balance_col:\n",
+    "                row1.append(\"$1,500.00 CR\")\n",
+    "            else:\n",
+    "                row1.append(\"\")\n",
+    "        rows.append(\" | \".join(row1))\n",
+    "        \n",
+    "        # Example 2: CREDIT transaction (deposit) - money IN\n",
+    "        row2 = []\n",
+    "        for h in headers:\n",
+    "            if h == date_col:\n",
+    "                row2.append(\"16 Jan\")\n",
+    "            elif h == desc_col:\n",
+    "                row2.append(\"Salary Employer Name Ref 12345\")\n",
+    "            elif h == debit_col:\n",
+    "                row2.append(\"\")  # Debit column EMPTY\n",
+    "            elif h == credit_col:\n",
+    "                row2.append(\"3,500.00\")  # Amount in CREDIT column\n",
+    "            elif h == balance_col:\n",
+    "                row2.append(\"$5,000.00 CR\")\n",
+    "            else:\n",
+    "                row2.append(\"\")\n",
+    "        rows.append(\" | \".join(row2))\n",
+    "        \n",
+    "        # Example 3: Another DEBIT transaction (purchase)\n",
+    "        row3 = []\n",
+    "        for h in headers:\n",
+    "            if h == date_col:\n",
+    "                row3.append(\"17 Jan\")\n",
+    "            elif h == desc_col:\n",
+    "                row3.append(\"Online Purchase Store Name\")\n",
+    "            elif h == debit_col:\n",
+    "                row3.append(\"150.00\")  # Amount in DEBIT column\n",
+    "            elif h == credit_col:\n",
+    "                row3.append(\"\")  # Credit column EMPTY\n",
+    "            elif h == balance_col:\n",
+    "                row3.append(\"$4,850.00 CR\")\n",
+    "            else:\n",
+    "                row3.append(\"\")\n",
+    "        rows.append(\" | \".join(row3))\n",
+    "        \n",
+    "    else:\n",
+    "        # 4-column format: Single Amount column\n",
+    "        row1 = []\n",
+    "        for h in headers:\n",
+    "            if h == date_col:\n",
+    "                row1.append(\"15 Jan\")\n",
+    "            elif h == desc_col:\n",
+    "                row1.append(\"ATM Withdrawal City Branch\")\n",
+    "            elif h == debit_col:  # This is the Amount column\n",
+    "                row1.append(\"200.00\")\n",
+    "            elif h == balance_col:\n",
+    "                row1.append(\"$1,500.00 CR\")\n",
+    "            else:\n",
+    "                row1.append(\"\")\n",
+    "        rows.append(\" | \".join(row1))\n",
+    "        \n",
+    "        row2 = []\n",
+    "        for h in headers:\n",
+    "            if h == date_col:\n",
+    "                row2.append(\"16 Jan\")\n",
+    "            elif h == desc_col:\n",
+    "                row2.append(\"Salary Employer Name Ref 12345\")\n",
+    "            elif h == debit_col:  # This is the Amount column\n",
+    "                row2.append(\"3,500.00\")\n",
+    "            elif h == balance_col:\n",
+    "                row2.append(\"$5,000.00 CR\")\n",
+    "            else:\n",
+    "                row2.append(\"\")\n",
+    "        rows.append(\" | \".join(row2))\n",
+    "    \n",
+    "    return rows\n",
+    "\n",
+    "def build_multiline_rule(headers):\n",
+    "    \"\"\"Generate multi-line extraction rule using ACTUAL column structure from Turn 0.\"\"\"\n",
+    "    num_cols = len(headers)\n",
+    "    \n",
+    "    # Find actual Debit and Credit columns by name\n",
+    "    debit_idx = None\n",
+    "    credit_idx = None\n",
+    "    \n",
+    "    for i, header in enumerate(headers):\n",
+    "        h_lower = header.lower()\n",
+    "        if any(p in h_lower for p in [\"debit\", \"withdrawal\", \"paid\", \"spent\", \"dr\"]):\n",
+    "            debit_idx = i\n",
+    "        if any(p in h_lower for p in [\"credit\", \"deposit\", \"received\", \"cr\"]):\n",
+    "            credit_idx = i\n",
+    "    \n",
+    "    if debit_idx is None or credit_idx is None:\n",
+    "        return \"Multi-line: combine description lines into single row.\"\n",
+    "    \n",
     "    def format_table(rows):\n",
     "        \"\"\"Format rows with aligned pipes.\"\"\"\n",
     "        col_widths = [max(len(row[i]) for row in rows) for i in range(len(rows[0]))]\n",
