Refactor Turn 0.5: Classify date format with dynamic examples and improved structure
- Removed redundant code and restructured the classification logic for date formats.
- Enhanced example rows for both "Date-per-row" and "Date-grouped" formats.
- Updated the classification prompt to reflect the new examples.
- Ensured proper formatting and alignment in the generated example tables.
- Added detailed comments for clarity and maintainability.

--- a/llama_bank_statement_independent_turns.ipynb
+++ b/llama_bank_statement_independent_turns.ipynb
@@ -299,13 +299,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": "# Cell 11: Turn 0.5 - Classify date format (INDEPENDENT turn)\n\n# Build DYNAMIC classification examples using ACTUAL headers from Turn 0\nheader_string = \" | \".join(table_headers)\n\ndef format_example_table(rows, headers):\n    \"\"\"Format example table with proper column alignment.\"\"\"\n    if not rows or not headers:\n        return \"No data\"\n    \n    # Calculate max width for each column\n    num_cols = len(headers)\n    col_widths = [len(h) for h in headers]  # Start with header widths\n    \n    for row in rows:\n        for col_idx, val in enumerate(row):\n            if col_idx < len(col_widths):\n                col_widths[col_idx] = max(col_widths[col_idx], len(str(val)))\n    \n    # Build formatted table\n    formatted = []\n    \n    # Header row\n    header_parts = [headers[i].ljust(col_widths[i]) for i in range(num_cols)]\n    formatted.append(\"  | \" + \" | \".join(header_parts) + \" |\")\n    \n    # Data rows\n    for row in rows:\n        row_parts = [str(row[i]).ljust(col_widths[i]) for i in range(num_cols)]\n        formatted.append(\"  | \" + \" | \".join(row_parts) + \" |\")\n    \n    return \"\\n\".join(formatted)\n\n\n# Build example rows for Date-per-row format\ndate_per_row_rows = []\nfor date_val in [\"15 Jan\", \"16 Jan\", \"17 Jan\"]:\n    row = []\n    for h in table_headers:\n        if h.lower() in ['date', 'day']:\n            row.append(date_val)\n        elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n            row.append(\"Transaction\")\n        elif 'debit' in h.lower() or 'withdrawal' in h.lower() or 'amount' in h.lower():\n            row.append(\"50.00\")\n        elif 'credit' in h.lower() or 'deposit' in h.lower():\n            row.append(\"\")\n        elif 'balance' in h.lower():\n            # Debit decreases, credit increases\n            if date_val == \"15 Jan\":\n                row.append(\"$950 CR\")  # After $50 debit\n            elif date_val == \"16 Jan\":\n                row.append(\"$4,450 CR\")  # After $3,500 credit\n            else:\n                row.append(\"$4,300 CR\")  # After $150 debit\n        else:\n            row.append(\"\")\n    date_per_row_rows.append(row)\n\ndate_per_row_example = format_example_table(date_per_row_rows, table_headers)\n\n# Build example rows for Date-grouped format\ndate_grouped_rows = []\n\n# Row 1: Date with empty other columns\nrow = []\nfor h in table_headers:\n    if h.lower() in ['date', 'day']:\n        row.append(\"15 Jan\")\n    else:\n        row.append(\"\")\ndate_grouped_rows.append(row)\n\n# Rows 2-3: Empty date, transactions underneath\nfor _ in range(2):\n    row = []\n    for h in table_headers:\n        if h.lower() in ['date', 'day']:\n            row.append(\"\")\n        elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n            row.append(\"Transaction\")\n        elif 'debit' in h.lower() or 'withdrawal' in h.lower() or 'amount' in h.lower():\n            row.append(\"50.00\")\n        elif 'credit' in h.lower() or 'deposit' in h.lower():\n            row.append(\"\")\n        elif 'balance' in h.lower():\n            row.append(\"$950 CR\")  # After debit\n        else:\n            row.append(\"\")\n    date_grouped_rows.append(row)\n\n# Row 4: New date section\nrow = []\nfor h in table_headers:\n    if h.lower() in ['date', 'day']:\n        row.append(\"16 Jan\")\n    else:\n        row.append(\"\")\ndate_grouped_rows.append(row)\n\n# Row 5: Transaction under new date\nrow = []\nfor h in table_headers:\n    if h.lower() in ['date', 'day']:\n        row.append(\"\")\n    elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n        row.append(\"Transaction\")\n    elif 'debit' in h.lower() or 'withdrawal' in h.lower() or 'amount' in h.lower():\n        row.append(\"100.00\")\n    elif 'credit' in h.lower() or 'deposit' in h.lower():\n        row.append(\"\")\n    elif 'balance' in h.lower():\n        row.append(\"$1,000 CR\")\n    else:\n        row.append(\"\")\ndate_grouped_rows.append(row)\n\ndate_grouped_example = format_example_table(date_grouped_rows, table_headers)\n\n# Build classification prompt with DYNAMIC examples\nformat_classification_prompt = f\"\"\"Look at the transaction table in this bank statement image.\n\nFocus on the Date column specifically:\n\n**Option 1 - \"Date-per-row\":**\nEVERY transaction row has a date value in the Date column.\nLook for: Each row has its own date - dates do NOT have empty rows underneath them.\nExample structure:\n{date_per_row_example}\n\n**Option 2 - \"Date-grouped\":**\nDates appear as SECTION HEADERS with EMPTY or missing dates in rows underneath.\nLook for: One date, then multiple rows with EMPTY date cells, then next date.\nExample structure:\n{date_grouped_example}\n\nCRITICAL: Look at the Date column in the image:\n- If EVERY row has a date → \"Date-per-row\"\n- If SOME rows have dates and SOME rows have EMPTY date cells → \"Date-grouped\"\n\nWhich format does this statement use?\n\nRespond with ONLY one of these exact phrases:\n- \"Date-per-row\"\n- \"Date-grouped\"\n\nDo not add any explanation. Just the classification.\"\"\"\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"CLASSIFICATION PROMPT:\")\nprint(\"=\" * 60)\nprint(format_classification_prompt)\nprint(\"=\" * 60 + \"\\n\")\n\n# CRITICAL: Create FRESH message structure (independent turn)\nmessageDataStructure_format = [\n    {\n        \"role\": \"user\",\n        \"content\": [\n            {\"type\": \"image\"},\n            {\"type\": \"text\", \"text\": format_classification_prompt}\n        ]\n    }\n]\n\nprint(\"💬 TURN 0.5: Classifying date format\")\nprint(\"🤖 Generating response with Llama-3.2-Vision...\")\n\n# Process with FRESH context\ntextInput = processor.apply_chat_template(\n    messageDataStructure_format, add_generation_prompt=True\n)\n\n# CRITICAL: Use named parameter 'images=' with list\ninputs = processor(images=images, text=textInput, return_tensors=\"pt\").to(model.device)\n\n# Generate response\noutput = model.generate(\n    **inputs,\n    max_new_tokens=100,  # Short response expected\n    do_sample=False,\n    temperature=None,\n    top_p=None,\n)\n\n# CRITICAL: Trim input tokens from output\ngenerate_ids = output[:, inputs['input_ids'].shape[1]:-1]\nformat_response = processor.decode(generate_ids[0], clean_up_tokenization_spaces=False).strip()\n\nprint(\"✅ Response generated successfully!\")\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 0.5 - DATE FORMAT CLASSIFICATION:\")\nprint(\"=\" * 60)\nprint(format_response)\nprint(\"=\" * 60)\n\n# Parse the classification\ndate_format = \"Date-per-row\"  # Default fallback\nif \"Date-grouped\" in format_response or \"date-grouped\" in format_response:\n    date_format = \"Date-grouped\"\nelif \"Date-per-row\" in format_response or \"date-per-row\" in format_response:\n    date_format = \"Date-per-row\"\n\nprint(f\"\\n📊 Detected Format: {date_format}\")\n\n# Save classification result\noutput_path = Path(\"llama_date_format_classification.txt\")\nwith output_path.open(\"w\", encoding=\"utf-8\") as f:\n    f.write(f\"Classification: {date_format}\\n\")\n    f.write(f\"Raw response: {format_response}\\n\")\n\nprint(f\"✅ Classification saved to: {output_path}\")\nprint(f\"💡 This format will determine the Turn 1 extraction example\")\n"
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,6 +309,262 @@
     "- **Date-grouped**: Dates appear as section headers with multiple transactions underneath\n",
     "\n",
     "This determines which extraction example to use in Turn 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 11: Turn 0.5 - Classify date format (INDEPENDENT turn)\n",
+    "\n",
+    "# Build DYNAMIC classification examples using ACTUAL headers from Turn 0\n",
+    "header_string = \" | \".join(table_headers)\n",
+    "\n",
+    "def format_example_table(rows, headers):\n",
+    "    \"\"\"Format example table with proper column alignment.\"\"\"\n",
+    "    if not rows or not headers:\n",
+    "        return \"No data\"\n",
+    "    \n",
+    "    # Calculate max width for each column\n",
+    "    num_cols = len(headers)\n",
+    "    col_widths = [len(h) for h in headers]  # Start with header widths\n",
+    "    \n",
+    "    for row in rows:\n",
+    "        for col_idx, val in enumerate(row):\n",
+    "            if col_idx < len(col_widths):\n",
+    "                col_widths[col_idx] = max(col_widths[col_idx], len(str(val)))\n",
+    "    \n",
+    "    # Build formatted table\n",
+    "    formatted = []\n",
+    "    \n",
+    "    # Header row\n",
+    "    header_parts = [headers[i].ljust(col_widths[i]) for i in range(num_cols)]\n",
+    "    formatted.append(\"  | \" + \" | \".join(header_parts) + \" |\")\n",
+    "    \n",
+    "    # Data rows\n",
+    "    for row in rows:\n",
+    "        row_parts = [str(row[i]).ljust(col_widths[i]) for i in range(num_cols)]\n",
+    "        formatted.append(\"  | \" + \" | \".join(row_parts) + \" |\")\n",
+    "    \n",
+    "    return \"\\n\".join(formatted)\n",
+    "\n",
+    "\n",
+    "# Build example rows for Date-per-row format\n",
+    "date_per_row_rows = []\n",
+    "\n",
+    "# Row 1: Debit transaction\n",
+    "row = []\n",
+    "for h in table_headers:\n",
+    "    if h.lower() in ['date', 'day']:\n",
+    "        row.append(\"15 Jan\")\n",
+    "    elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n",
+    "        row.append(\"Transaction\")\n",
+    "    elif 'debit' in h.lower() or 'withdrawal' in h.lower():\n",
+    "        row.append(\"50.00\")\n",
+    "    elif 'credit' in h.lower() or 'deposit' in h.lower():\n",
+    "        row.append(\"\")\n",
+    "    elif 'balance' in h.lower():\n",
+    "        row.append(\"$950 CR\")\n",
+    "    elif 'amount' in h.lower():\n",
+    "        row.append(\"50.00\")\n",
+    "    else:\n",
+    "        row.append(\"\")\n",
+    "date_per_row_rows.append(row)\n",
+    "\n",
+    "# Row 2: Credit transaction (shows in Credit column)\n",
+    "row = []\n",
+    "for h in table_headers:\n",
+    "    if h.lower() in ['date', 'day']:\n",
+    "        row.append(\"16 Jan\")\n",
+    "    elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n",
+    "        row.append(\"Transaction\")\n",
+    "    elif 'debit' in h.lower() or 'withdrawal' in h.lower():\n",
+    "        row.append(\"\")  # Empty - this is a credit\n",
+    "    elif 'credit' in h.lower() or 'deposit' in h.lower():\n",
+    "        row.append(\"3,500.00\")\n",
+    "    elif 'balance' in h.lower():\n",
+    "        row.append(\"$4,450 CR\")\n",
+    "    elif 'amount' in h.lower():\n",
+    "        row.append(\"3,500.00\")\n",
+    "    else:\n",
+    "        row.append(\"\")\n",
+    "date_per_row_rows.append(row)\n",
+    "\n",
+    "# Row 3: Debit transaction (different amount)\n",
+    "row = []\n",
+    "for h in table_headers:\n",
+    "    if h.lower() in ['date', 'day']:\n",
+    "        row.append(\"17 Jan\")\n",
+    "    elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n",
+    "        row.append(\"Transaction\")\n",
+    "    elif 'debit' in h.lower() or 'withdrawal' in h.lower():\n",
+    "        row.append(\"150.00\")\n",
+    "    elif 'credit' in h.lower() or 'deposit' in h.lower():\n",
+    "        row.append(\"\")\n",
+    "    elif 'balance' in h.lower():\n",
+    "        row.append(\"$4,300 CR\")\n",
+    "    elif 'amount' in h.lower():\n",
+    "        row.append(\"150.00\")\n",
+    "    else:\n",
+    "        row.append(\"\")\n",
+    "date_per_row_rows.append(row)\n",
+    "\n",
+    "date_per_row_example = format_example_table(date_per_row_rows, table_headers)\n",
+    "\n",
+    "# Build example rows for Date-grouped format\n",
+    "date_grouped_rows = []\n",
+    "\n",
+    "# Row 1: Date with empty other columns\n",
+    "row = []\n",
+    "for h in table_headers:\n",
+    "    if h.lower() in ['date', 'day']:\n",
+    "        row.append(\"15 Jan\")\n",
+    "    else:\n",
+    "        row.append(\"\")\n",
+    "date_grouped_rows.append(row)\n",
+    "\n",
+    "# Rows 2-3: Empty date, transactions underneath\n",
+    "for _ in range(2):\n",
+    "    row = []\n",
+    "    for h in table_headers:\n",
+    "        if h.lower() in ['date', 'day']:\n",
+    "            row.append(\"\")\n",
+    "        elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n",
+    "            row.append(\"Transaction\")\n",
+    "        elif 'debit' in h.lower() or 'withdrawal' in h.lower() or 'amount' in h.lower():\n",
+    "            row.append(\"50.00\")\n",
+    "        elif 'credit' in h.lower() or 'deposit' in h.lower():\n",
+    "            row.append(\"\")\n",
+    "        elif 'balance' in h.lower():\n",
+    "            row.append(\"$950 CR\")  # After debit\n",
+    "        else:\n",
+    "            row.append(\"\")\n",
+    "    date_grouped_rows.append(row)\n",
+    "\n",
+    "# Row 4: New date section\n",
+    "row = []\n",
+    "for h in table_headers:\n",
+    "    if h.lower() in ['date', 'day']:\n",
+    "        row.append(\"16 Jan\")\n",
+    "    else:\n",
+    "        row.append(\"\")\n",
+    "date_grouped_rows.append(row)\n",
+    "\n",
+    "# Row 5: Transaction under new date\n",
+    "row = []\n",
+    "for h in table_headers:\n",
+    "    if h.lower() in ['date', 'day']:\n",
+    "        row.append(\"\")\n",
+    "    elif 'desc' in h.lower() or 'particular' in h.lower() or 'detail' in h.lower() or 'transaction' in h.lower():\n",
+    "        row.append(\"Transaction\")\n",
+    "    elif 'debit' in h.lower() or 'withdrawal' in h.lower() or 'amount' in h.lower():\n",
+    "        row.append(\"100.00\")\n",
+    "    elif 'credit' in h.lower() or 'deposit' in h.lower():\n",
+    "        row.append(\"\")\n",
+    "    elif 'balance' in h.lower():\n",
+    "        row.append(\"$1,050 CR\")  # After credit\n",
+    "    else:\n",
+    "        row.append(\"\")\n",
+    "date_grouped_rows.append(row)\n",
+    "\n",
+    "date_grouped_example = format_example_table(date_grouped_rows, table_headers)\n",
+    "\n",
+    "# Build classification prompt with DYNAMIC examples\n",
+    "format_classification_prompt = f\"\"\"Look at the transaction table in this bank statement image.\n",
+    "\n",
+    "Focus on the Date column specifically:\n",
+    "\n",
+    "**Option 1 - \"Date-per-row\":**\n",
+    "EVERY transaction row has a date value in the Date column.\n",
+    "Look for: Each row has its own date - dates do NOT have empty rows underneath them.\n",
+    "Example structure:\n",
+    "{date_per_row_example}\n",
+    "\n",
+    "**Option 2 - \"Date-grouped\":**\n",
+    "Dates appear as SECTION HEADERS with EMPTY or missing dates in rows underneath.\n",
+    "Look for: One date, then multiple rows with EMPTY date cells, then next date.\n",
+    "Example structure:\n",
+    "{date_grouped_example}\n",
+    "\n",
+    "CRITICAL: Look at the Date column in the image:\n",
+    "- If EVERY row has a date → \"Date-per-row\"\n",
+    "- If SOME rows have dates and SOME rows have EMPTY date cells → \"Date-grouped\"\n",
+    "\n",
+    "Which format does this statement use?\n",
+    "\n",
+    "Respond with ONLY one of these exact phrases:\n",
+    "- \"Date-per-row\"\n",
+    "- \"Date-grouped\"\n",
+    "\n",
+    "Do not add any explanation. Just the classification.\"\"\"\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"CLASSIFICATION PROMPT:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(format_classification_prompt)\n",
+    "print(\"=\" * 60 + \"\\n\")\n",
+    "\n",
+    "# CRITICAL: Create FRESH message structure (independent turn)\n",
+    "messageDataStructure_format = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"image\"},\n",
+    "            {\"type\": \"text\", \"text\": format_classification_prompt}\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "print(\"💬 TURN 0.5: Classifying date format\")\n",
+    "print(\"🤖 Generating response with Llama-3.2-Vision...\")\n",
+    "\n",
+    "# Process with FRESH context\n",
+    "textInput = processor.apply_chat_template(\n",
+    "    messageDataStructure_format, add_generation_prompt=True\n",
+    ")\n",
+    "\n",
+    "# CRITICAL: Use named parameter 'images=' with list\n",
+    "inputs = processor(images=images, text=textInput, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "# Generate response\n",
+    "output = model.generate(\n",
+    "    **inputs,\n",
+    "    max_new_tokens=100,  # Short response expected\n",
+    "    do_sample=False,\n",
+    "    temperature=None,\n",
+    "    top_p=None,\n",
+    ")\n",
+    "\n",
+    "# CRITICAL: Trim input tokens from output\n",
+    "generate_ids = output[:, inputs['input_ids'].shape[1]:-1]\n",
+    "format_response = processor.decode(generate_ids[0], clean_up_tokenization_spaces=False).strip()\n",
+    "\n",
+    "print(\"✅ Response generated successfully!\")\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 0.5 - DATE FORMAT CLASSIFICATION:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(format_response)\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Parse the classification\n",
+    "date_format = \"Date-per-row\"  # Default fallback\n",
+    "if \"Date-grouped\" in format_response or \"date-grouped\" in format_response:\n",
+    "    date_format = \"Date-grouped\"\n",
+    "elif \"Date-per-row\" in format_response or \"date-per-row\" in format_response:\n",
+    "    date_format = \"Date-per-row\"\n",
+    "\n",
+    "print(f\"\\n📊 Detected Format: {date_format}\")\n",
+    "\n",
+    "# Save classification result\n",
+    "output_path = Path(\"llama_date_format_classification.txt\")\n",
+    "with output_path.open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(f\"Classification: {date_format}\\n\")\n",
+    "    f.write(f\"Raw response: {format_response}\\n\")\n",
+    "\n",
+    "print(f\"✅ Classification saved to: {output_path}\")\n",
+    "print(f\"💡 This format will determine the Turn 1 extraction example\")\n"
    ]
   },
   {
